chore: привел к общему неймингу

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-# ????? ?????????????
+# programmers
 N=7
-# ????? ??????????
+# waiters
 W=3
-# ????? ??????
-F=5000
-# ????? ????? ? ???????
+# portions
+F=9999
 bitesInBowl=1
 
-# ? ?????????????, ??????? ?????? ? ????
-thinkMin=2
-thinkMax=8
+thinkMin=1
+thinkMax=6
 eatMin=2
 eatMax=6
